--- a/.env.example
+++ b/.env.example
@@ -20,11 +20,11 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql5.onamae.ne.jp
 DB_PORT=3306
-DB_DATABASE=qasiteforlaravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=s35ix_qa_laravel
+DB_USERNAME=s35ix_qa_laravel_aoi
+DB_PASSWORD=20010816enDo%
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
