--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ APP_KEY=base64:r2YzzNXwcnJFH6d1u1HlCEBQvOqrs70ZZiTb7s98k8s=
 APP_DEBUG=false
 APP_TIMEZONE=UTC
 APP_URL=https://educationarch.jp
+ASSET_URL=https://educationarch.jp
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
