テスト機能の追加と問題演習機能の追加

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ APP_NAME=QASiteLaravel
 APP_ENV=production
 APP_KEY=base64:r2YzzNXwcnJFH6d1u1HlCEBQvOqrs70ZZiTb7s98k8s=
 APP_DEBUG=false
-APP_TIMEZONE=UTC
+APP_TIMEZONE='Asia/Tokyo'
 APP_URL=https://educationarch.jp
 ASSET_URL=https://educationarch.jp
 
